--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -14,8 +14,10 @@
     display: flex
     justify-content: space-between
     align-items: center
-    height: 120px
+    height: 65px
     transition: height 0.3s ease-in-out
+    +rmin(1440)
+      height: 120px
 
     .is-fixed &
       height: 90px
@@ -25,8 +27,11 @@
     cursor: pointer
     display: flex
     align-items: center
-    padding-left: 60px
-    height: 120px
+    height: 65px
+    padding-left: 30px
+    +rmin(1440)
+      height: 120px
+      padding-left: 60px
     .is-fixed &
       height: 90px
 
@@ -40,30 +45,39 @@
         transition: color .25s ease-in-out
 
     &-box
-      width: 42px
-      margin-right: 60px
+      width: 22px
+      margin-right: 30px
+      +rmin(1440)
+        width: 42px
+        margin-right: 60px
 
     &-line
       display: block
       width: 100%
-      height: 4px
-      margin-bottom: 3px
+      height: 2px
+      margin-bottom: 2px
       background-color: $colorWhite
       transition: background-color .25s ease-in-out
+      +rmin(1440)
+        height: 4px
+        margin-bottom: 3px
       &:last-child
         margin-bottom: 0
       &--1,
       &--2
-        width: 21px
+        width: 11px
         margin:
           left: auto
           right: auto
+        +rmin(1440)
+          width: 21px
+
     &-text
       color: $colorWhite
       font:
         weight: bold
       transition: color .25s ease-in-out
-      font-size: 20px
+      font-size: 11px
       +rmin(1440)
         font-size: 22px
       +rmin(1920)
@@ -75,25 +89,27 @@
     left: 0
     right: 0
     top: 50%
-    transform: translateY(-50%)
+    transform: translateY(-50%) scale(0.5)
     margin: auto
+    +rmin(1440)
+      transform: scale(1)
 
 
   &__order
     display: flex
     align-items: center
     justify-content: flex-end
-    width: 310px
+    width: 180px
     height: 100%
-    padding:
-      right: 55px
-    font:
-      weight: bold
+    padding-right: 35px
+    font-weight: bold
     color: $colorFuelYellow
     text-align: right
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out
-    font-size: 20px
+    font-size: 9px
     +rmin(1440)
+      width: 310px
+      padding-right: 55px
       font-size: 22px
     +rmin(1920)
       font-size: 24px
