--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -43,11 +43,11 @@
       right: 0
       transition: right 0.45s ease-in-out
 
-    width: 540px
+    width: 350px
     padding:
-      top: 68px
-      left: 40px
-      right: 40px
+      top: 50px
+      left: 30px
+      right: 30px
       bottom: 107px
     +rmin(1440)
       width: 600px
@@ -69,7 +69,7 @@
     &-title
       margin-bottom: 5px
       color: $colorNobel
-      font-size: 20px
+      font-size: 12px
       +rmin(1440)
         font-size: 22px
       +rmin(1920)
@@ -102,7 +102,7 @@
           visibility: visible
           transform: scaleX(1)
 
-      font-size: 30px
+      font-size: 20px
       +rmin(1440)
         font-size: 35px
       +rmin(1920)
@@ -110,7 +110,7 @@
 
   &__phone
     &-wrap
-      margin-bottom: 30px
+      margin-bottom: 20px
       +rmin(1440)
         margin-bottom: 40px
       +rmin(1920)
@@ -118,7 +118,7 @@
 
   &__email
     &-wrap
-      margin-bottom: 70px
+      margin-bottom: 20px
       +rmin(1440)
         margin-bottom: 80px
       +rmin(1920)
@@ -136,8 +136,8 @@
         weight: bold
       text-align: center
       color: $colorNobel
-      font-size: 20px
-      margin-bottom: 30px
+      font-size: 10px
+      margin-bottom: 20px
       +rmin(1440)
         font-size: 22px
         margin-bottom: 33px
@@ -149,9 +149,10 @@
       display: flex
       justify-content: space-between
       width: 100%
-      height: 60px
+      height: 30px
       margin-bottom: 20px
       +rmin(1440)
+        height: 60px
         margin-bottom: 25px
       +rmin(1920)
         margin-bottom: 30px
@@ -160,10 +161,14 @@
         display: flex
         align-items: center
         justify-content: center
-        width: 60px
-        height: 60px
-        border: 5px solid $colorBlack
+        width: 30px
+        height: 30px
+        border: 3px solid $colorBlack
         transition: border-color 0.3s ease-in-out
+        +rmin(1440)
+          width: 60px
+          height: 60px
+          border-width: 5px
 
         &:hover
           border-color: $colorFuelYellow
@@ -181,21 +186,22 @@
         i
           position: absolute
           transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out
+          transform: scale(0.5)
           &:last-child
             opacity: 0
             visibility: hidden
 
     &-field
       width: 100%
-      min-height: 60px
-      margin-bottom: 20px
+      min-height: 40px
+      margin-bottom: 10px
       +rmin(1440)
         margin-bottom: 25px
       +rmin(1920)
         margin-bottom: 30px
 
       &--email
-        margin-bottom: 30px
+        margin-bottom: 10px
         +rmin(1440)
           margin-bottom: 33px
         +rmin(1920)
@@ -210,12 +216,12 @@
 
       input
         width: 100%
-        height: 60px
+        height: 40px
         padding:
           left: 15px
           right: 15px
         background-color: transparent
-        border: 5px solid $colorBlack
+        border: 3px solid $colorBlack
         font:
           weight: bold
         text-align: left
@@ -230,12 +236,17 @@
         &:-moz-placeholder
           text-align: center
 
+        +rmin(1440)
+          height: 60px
+          border-width: 5px
+
+
 
         &:focus
           border-color: $colorFuelYellow
           transition: border-color 0.3s ease-in-out
 
-        font-size: 20px
+        font-size: 14px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
