Add responsive programs page.

--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -138,6 +138,7 @@
     letter-spacing: 4px
     transition: text-shadow 0.3s ease-in-out
     +rmin(1440)
+      font-size: 35px
       padding:
         left: 30px
         right: 30px
