--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -191,6 +191,9 @@
             opacity: 0
             visibility: hidden
 
+          +rmin(1440)
+            transform: scale(1)
+
     &-field
       width: 100%
       min-height: 40px
