Add responsive season page.

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -88,11 +88,11 @@
     position: absolute
     left: 0
     right: 0
-    //top: 50%
+    top: 50%
     transform: translateY(-50%) scale(0.5)
     margin: auto
     +rmin(1440)
-      transform: scale(1)
+      transform: translateY(-50%) scale(1)
 
 
   &__order
