--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -18,7 +18,7 @@
       max-width: 100%
       max-height: 100%
       height: auto
-      left: -15%
+      left: 0
       +rmin(1440)
         left: -10%
       +rmin(1920)
@@ -212,7 +212,9 @@
         z-index: 0
         position: absolute
         bottom: 0
-        left: -15%
+        left: 0
+        max-width: 100%
+        max-height: 100%
         +rmin(1440)
           left: -10%
         +rmin(1920)
