--- a/src/sass/components/_news.sass
+++ b/src/sass/components/_news.sass
@@ -3,9 +3,15 @@
 .news
   &__main
     padding:
-      top: 60px
-      bottom: 60px
+      top: 30px
+      bottom: 30px
     background-color: $colorNero
+    +rmin(1440)
+      padding:
+        top: 60px
+        bottom: 60px
 
     &-cbtn
-      margin-bottom: 76px
+      margin-bottom: 30px
+      +rmin(1440)
+        margin-bottom: 76px
