--- a/src/sass/components/_modal.sass
+++ b/src/sass/components/_modal.sass
@@ -2,13 +2,14 @@
 
 .modal
   position: relative
-  max-width: 600px
-  min-height: 400px
+  max-width: 350px
+  min-height: 200px
   background-color: $colorNero
   margin: 40px auto
   color: $colorWhite
   padding: 20px 40px 47px 47px
   +rmin(1440)
+    max-width: 600px
     padding: 25px 50px 57px 57px
   +rmin(1920)
     padding: 30px 60px 67px 67px
@@ -25,7 +26,7 @@
 
     p
       color: $colorNobel
-      font-size: 16px
+      font-size: 14px
       +rmin(1440)
         font-size: 18px
       +rmin(1920)
@@ -35,8 +36,8 @@
       font:
         weight: bold
       color: $colorFuelYellow
-      font-size: 30px
-      margin-bottom: 40px
+      font-size: 20px
+      margin-bottom: 20px
       +rmin(1440)
         font-size: 35px
         margin-bottom: 50px
@@ -46,11 +47,11 @@
 
     &-field
       width: 100%
-      min-height: 60px
-      margin-bottom: 30px
+      min-height: 40px
+      margin-bottom: 10px
 
       &--email
-        margin-bottom: 30px
+        margin-bottom: 10px
         +rmin(1440)
           margin-bottom: 33px
         +rmin(1920)
@@ -65,12 +66,12 @@
 
       input
         width: 100%
-        height: 60px
+        height: 40px
         padding:
           left: 15px
           right: 15px
         background-color: transparent
-        border: 5px solid $colorBlack
+        border: 3px solid $colorBlack
         font:
           weight: bold
           family: 'CenturyGothic', Arial, sans-serif
@@ -86,11 +87,15 @@
         &:-moz-placeholder
           text-align: center
 
+        +rmin(1440)
+          height: 60px
+          border-width: 5px
+
         &:focus
           border-color: $colorFuelYellow
           transition: border-color 0.3s ease-in-out
 
-        font-size: 20px
+        font-size: 14px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
