--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -150,6 +150,9 @@
           left: 100px
           right: 50px
         +rmin(1440)
+          padding:
+            left: 0
+            right: 0
           margin-left: 150px
         +rmin(1920)
           margin-left: 180px
