Replace image lights in homepage.

--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -20,7 +20,8 @@ block content
     // block programs
     .homepage__program
 
-      img(src="./img/ImageBgLight_main.png" class="homepage__program-bg")
+      img(src="./img/ImageBgLight_main--0.png" class="homepage__program-bg homepage__program-bg--0")
+      img(src="./img/ImageBgLight_main--1.png" class="homepage__program-bg homepage__program-bg--1")
 
       .container
 
