--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -65,8 +65,17 @@
     &-bg
       position: absolute
       z-index: 0
-      top: 100px
-      left: -24%
+      //top: 100px
+      //left: -24%
+
+      &--0
+        z-index: 0
+        top: 100px
+        left: -20%
+      &--1
+        z-index: 1
+        bottom: 0
+        right: 0
 
 
     &-title
