--- a/src/sass/components/_school.sass
+++ b/src/sass/components/_school.sass
@@ -40,7 +40,7 @@
       top: 0
       right: 0
       max-width: 50%
-      min-height: 100%
+      max-height: 100%
       height: auto
       display: block
       +rmin(1440)
