--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -26,6 +26,8 @@ body, html
   letter-spacing: 3px
   min-width: 1024px
   max-width: 100%
+  height: 100%
+  min-height: 100%
   margin: 0
   overflow-x: hidden
   -webkit-font-smoothing: antialiased
