Fix school, contact and menu block.

--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -4,7 +4,7 @@
 
   .row
 
-    img(src="./img/menuBg.jpg" class="menu__img menu__img--bg")
+    img(src="./img/ImageBgLight_main--0.png" class="menu__img menu__img--bg")
 
     .container
 
