Fix homepage bg image, replace cover to contain. Hide menu.

--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -1,8 +1,8 @@
 // MENU
 
 .menu
-  //opacity: 0
-  //visibility: hidden
+  opacity: 0
+  visibility: hidden
   z-index: 100
   position: fixed
   top: 0
