--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -20,7 +20,7 @@
       height: 100%
       background-image: url("../img/ImageBg_main.jpg")
       background-repeat: no-repeat
-      background-size: cover
+      background-size: contain
       background-position: center
       +rmin(1024)
         background-attachment: fixed
@@ -65,8 +65,6 @@
     &-bg
       position: absolute
       z-index: 0
-      //top: 100px
-      //left: -24%
 
       &--0
         z-index: 0
