--- a/src/sass/components/_social.sass
+++ b/src/sass/components/_social.sass
@@ -15,9 +15,9 @@
   &__name
     @extend %fontPropertiesSocial
 
-    transition: color .3s ease-in-out
-
+    text-shadow: 0 0 36px rgba(0, 0, 0, 0.5)
     font-size: 13px
+    transition: color .3s ease-in-out
     +rmin(1440)
       font-size: 22px
     +rmin(1920)
@@ -35,4 +35,5 @@
       font-size: 22px
     +rmin(1920)
       font-size: 24px
+
 
