--- a/src/sass/components/_school.sass
+++ b/src/sass/components/_school.sass
@@ -74,6 +74,7 @@
         display: block
         font-size: 14px
         letter-spacing: 1.1px
+        line-height: 1.5
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
