--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -286,6 +286,7 @@
       text-align: center
       font-size: 15px
       letter-spacing: 1.1px
+      line-height: 1.5
       +rmin(1440)
         font-size: 22px
       +rmin(1920)
@@ -309,7 +310,15 @@
 
     &-container
       width: 100%
-      max-width: 480px
+      height: 100%
+      max-height: 280px
+      max-width: 280px
+      +rmin(1440)
+        max-height: 400px
+        max-width: 400px
+      +rmin(1920)
+        max-height: 480px
+        max-width: 480px
 
       &:nth-child(2)
         margin:
@@ -327,7 +336,7 @@
         weight: bold
       color: $colorFuelYellow
       text-align: center
-      height: 320px
+      height: 280px
       font-size: 25px
       +rmin(1440)
         height: 400px
