Add menu logo - go ot homepage. Check custom btn animation. Replace error notify color.

--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -20,7 +20,7 @@
       height: 100%
       background-image: url("../img/ImageBg_main.jpg")
       background-repeat: no-repeat
-      background-size: contain
+      background-size: cover
       background-position: center
       +rmin(1024)
         background-attachment: fixed
