--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -1,8 +1,9 @@
 // ERROR
 // ===============
 .error
-  color: red
+  color: $colorFuelYellow
   font-size: 12px
+  font-weight: bold
 
 
 // ANIMATION
