--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -71,8 +71,9 @@
   &--active
     &:hover
       .cbutton__text
+        padding-bottom: 7px
         text-shadow: 1px 1px 10px rgba(0,0,0,0.5)
-        transition: text-shadow 0.3s ease-in-out
+        transition: text-shadow 0.3s ease-in-out, padding-bottom 0.3s ease-in-out
 
       .cbutton__block-bg
         transition: height 0.3s ease-in-out
@@ -126,6 +127,7 @@
 
 
   &__text
+    line-height: 1.2
     position: relative
     z-index: 1
     padding-top: 7px
@@ -136,7 +138,7 @@
       weight: bold
       size: 20px
     letter-spacing: 4px
-    transition: text-shadow 0.3s ease-in-out
+    transition: text-shadow 0.3s ease-in-out, padding-bottom 0.3s ease-in-out
     +rmin(1440)
       font-size: 35px
       padding:
